--- a/frontend/src/app/components/pages/cobros/cobros.component.html
+++ b/frontend/src/app/components/pages/cobros/cobros.component.html
@@ -240,7 +240,7 @@
 								<strong>Búsqueda de NIT y Razón Social:</strong>
 							</div>
 							<div class="p-3">
-								<form [formGroup]="identidadForm" class="row g-3 align-items-center">
+								<form [formGroup]="modalIdentidadForm" class="row g-3 align-items-center">
 									<div class="col-md-6">
 										<label class="form-label fw-semibold text-success">Tipo de Identidad</label>
 										<select class="form-select" formControlName="tipo_identidad">
