--- a/frontend/src/app/components/pages/cobros/cobros.component.html
+++ b/frontend/src/app/components/pages/cobros/cobros.component.html
@@ -127,13 +127,14 @@
 								<table class="table table-sm table-bordered align-middle">
 									<thead class="table-light">
 										<tr>
-											<th>#</th>
-											<th>Nro Cobro</th>
-											<th>ID Cuota</th>
-											<th>ID Item</th>
-											<th>Monto</th>
-											<th>Observaciones</th>
-											<th>Fecha cobro</th>
+											<th>Cant.</th>
+											<th>Detalle</th>
+											<th>P/U</th>
+											<th>Descuento</th>
+											<th>Sub total</th>
+											<th>M</th>
+											<th>D</th>
+											<th>Obs.</th>
 											<th></th>
 										</tr>
 									</thead>
@@ -214,7 +215,7 @@
              				 	<span class="fw-medium">Saldo Mensualidad:</span>
               					<strong class="text-danger">{{ resumen?.totales?.saldo_mensualidad | number: '1.2-2' }}</strong>
            				 	</div>
-       				</div>
+       				    </div>
 					</div>
 					</div>
 					</ng-container>
