añadiendo formas de pago y sus respectivos modales

--- a/frontend/src/app/components/pages/cobros/cobros.component.html
+++ b/frontend/src/app/components/pages/cobros/cobros.component.html
@@ -471,6 +471,7 @@
     <app-mensualidad-modal
       [resumen]="resumen"
       [formasCobro]="formasCobro"
+      [cuentasBancarias]="cuentasBancarias"
       [tipo]="modalTipo"
       [pendientes]="mensualidadesPendientes"
       [pu]="mensualidadPU"
